# Vitruvian

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile.common  Makefile.in  README.md  bake  config.h.in  configure  configure.in  cosmoe.sh  cosmoe.specs.in  engine.cmake  log  makefile.rules
src/: CMakeLists.txt
src/add-ons/: CMakeLists.txt
src/add-ons/input_server/: CMakeLists.txt
src/add-ons/opengl/: CMakeLists.txt
src/add-ons/tracker/: CMakeLists.txt
src/add-ons/translators/: CMakeLists.txt
src/apps/: CMakeLists.txt  Makefile.in
src/apps/aboutsystem/: AboutSystem.cpp  AboutSystem.rdef  CMakeLists.txt
src/apps/activitymonitor/: ActivityView.cpp  ActivityView.h  ActivityWindow.cpp  ActivityWindow.h  CMakeLists.txt  SystemInfo.cpp  SystemInfoHandler.cpp
src/apps/autoraise/: CMakeLists.txt
src/apps/clock/: CMakeLists.txt
src/apps/deskbar/: BarApp.cpp  BarApp.h  BarMenuBar.cpp  BarMenuTitle.cpp  BarMenuTitle.h  BarWindow.cpp  CMakeLists.txt  DeskbarMenu.cpp  StatusView.cpp  icons.h  icons.rdef
src/apps/deskcalc/: CMakeLists.txt  CalcView.cpp
src/apps/devices/: CMakeLists.txt
src/apps/diskprobe/: CMakeLists.txt  DataEditor.cpp
src/apps/diskusage/: CMakeLists.txt  Scanner.cpp
src/apps/drivesetup/: CMakeLists.txt  MainWindow.cpp
src/apps/expander/: CMakeLists.txt  ExpanderSettings.cpp
src/apps/firstbootprompt/: BootPrompt.cpp  BootPromptWindow.cpp  BootPromptWindow.h  CMakeLists.txt  Keymap.h  KeymapNames.h
src/apps/fontdemo/: CMakeLists.txt
src/apps/glteapot/: CMakeLists.txt  Quaternion.h
src/apps/gradients/: CMakeLists.txt
src/apps/installer/: CMakeLists.txt  CopyEngine.cpp  CopyEngine.h  EULAWindow.cpp  Installer.rdef  InstallerApp.cpp  InstallerApp.h  InstallerDefs.cpp  InstallerDefs.h  InstallerWindow.cpp  InstallerWindow.h  PackageViews.cpp  WorkerThread.cpp  WorkerThread.h
src/apps/launchbox/: CMakeLists.txt
src/apps/magnify/: CMakeLists.txt
src/apps/mandelbrot/: CMakeLists.txt  Mandelbrot.cpp
src/apps/networkstatus/: CMakeLists.txt  NetworkStatus.cpp  NetworkStatusView.cpp
src/apps/osutils/: CMakeLists.txt  Makefile.in  portinfo.cpp  seminfo.cpp
src/apps/overlayimage/: CMakeLists.txt
src/apps/pairs/: CMakeLists.txt
src/apps/people/: CMakeLists.txt
src/apps/poorman/: CMakeLists.txt
src/apps/powerstatus/: APMDriverInterface.cpp  CMakeLists.txt
src/apps/processcontroller/: CMakeLists.txt  KernelMemoryBarMenuItem.cpp  ProcessController.cpp
src/apps/pulse/: CMakeLists.txt  CPUButton.cpp  PulseApp.cpp  PulseView.cpp
src/apps/remotedesktop/: CMakeLists.txt
src/apps/resedit/: CMakeLists.txt  ResEdit.rdef
src/apps/screenshot/: CMakeLists.txt
src/apps/serialconnect/: CMakeLists.txt
src/apps/showimage/: CMakeLists.txt  Filter.cpp  ImageFileNavigator.cpp  ShowImageView.cpp  ShowImageWindow.cpp
src/apps/stylededit/: CMakeLists.txt  StyledEditApp.cpp  StyledEditApp.h  StyledEditWindow.cpp
src/apps/sudoku/: CMakeLists.txt  Sudoku.cpp  SudokuView.cpp
src/apps/switcher/: CMakeLists.txt
src/apps/terminal/: Arguments.cpp  Arguments.h  BasicTerminalBuffer.cpp  CMakeLists.txt  PrefHandler.cpp  Shell.cpp  TermParse.cpp  TermWindow.cpp  ThemeView.cpp  VTkeymap.h
src/apps/testharness/: CMakeLists.txt  Makefile.in  main.cpp  testlist.cpp  testports.cpp  testthread.cpp
src/apps/text_search/: CMakeLists.txt
src/apps/tracker/: CMakeLists.txt
src/apps/vitruvian-login/: CMakeLists.txt  vitruvian-login.cpp
src/apps/vos-polkit-agent/: CMakeLists.txt  vos-polkit-agent.cpp  vos-polkit-agent.rdef
src/apps/workspaces/: CMakeLists.txt
src/data/: CMakeLists.txt
src/data/deskbar/: menu_entries
src/kits/: CMakeLists.txt  Makefile.in
src/kits/app/: AppMisc.cpp  Application.cpp  BusHelpers.cpp  CMakeLists.txt  Cursor.cpp  Handler.cpp  InitTerminateLibBe.c  InitTerminateLibBe.cpp  LaunchRoster.cpp  LinkMsgReader.cpp  LinkMsgSender.cpp  LinkReceiver.cpp  LinkSender.cpp  Looper.cpp  LooperList.cpp  Message.cpp  MessageAdapter.cpp  MessageField.cpp  MessageQueue.cpp  MessageRunner.cpp  MessageUtils.cpp  Messenger.cpp  PropertyInfo.cpp  RegistrarDefs.cpp  Roster.cpp  Session.cpp
src/kits/game/: CMakeLists.txt  FileGameSound.cpp  GSUtility.cpp  GSUtility.h  GameSoundBuffer.cpp  GameSoundBuffer.h  GameSoundDevice.cpp  GameSoundDevice.h  SimpleGameSound.cpp  StreamingGameSound.cpp
src/kits/interface/: AboutWindow.cpp  Alert.cpp  Bitmap.cpp  Box.cpp  Button.cpp  CMakeLists.txt  CheckBox.cpp  ClientFontList.cpp  ColorControl.cpp  ColorConversion.cpp  ColumnTypes.cpp  Control.cpp  DecorInfo.cpp  Deskbar.cpp  Dragger.cpp  Font.cpp  GraphicsDefs.cpp  HaikuControlLook.cpp  Input.cpp  InterfaceDefs.cpp  Layout.cpp  ListView.cpp  Menu.cpp  MenuBar.cpp  MenuItem.cpp  MenuWindow.cpp  Picture.cpp  Point.cpp  Polygon.cpp  PopUpMenu.cpp  PrintJob.cpp  PrivateScreen.cpp  RadioButton.cpp  Region.cpp  RegionSupport.cpp  Screen.cpp  ScrollView.cpp  Shape.cpp  Shelf.cpp  Slider.cpp  (+9 more)
src/kits/kernel/: area.c  direntfd.c  image.c  misc.c  parsedate.cpp  port.c  real_time_clock.c  sem.c  sem.orig.c  sem.posix.c  thread.c
src/kits/locale/: CMakeLists.txt  CatalogData.cpp  CatalogStub.cpp  Country.cpp  DefaultCatalog.cpp  InitLocaleKit.cpp  LocaleRoster.cpp  LocaleRosterData.cpp  MutableLocaleRoster.cpp  TimeFormat.cpp
src/kits/media2/: CMakeLists.txt  Controllable.cpp  DefaultMediaTheme.cpp  FormatConversion.cpp  FormatConversion.h  GStreamerBackend.cpp  GStreamerBackend.h  MediaAutomation.cpp  MediaClient.cpp  MediaConnection.cpp  MediaDefs.cpp  MediaFile.cpp  MediaFiles.cpp  MediaFormat.cpp  MediaFormats.cpp  MediaGraph.cpp  MediaNode.cpp  MediaPlayer.cpp  MediaRecorder.cpp  MediaTheme.cpp  ParameterWeb.cpp  PipeWireBackend.cpp  PipeWireBackend.h  PlaySound.cpp  SimpleMediaClient.cpp  SimpleMediaNode.cpp  Sound.cpp  SoundPlayer.cpp  TimeCode.cpp
src/kits/network/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/preferences/: CMakeLists.txt
src/servers/: CMakeLists.txt
src/system/: CMakeLists.txt  Makefile.in
src/tests/: CMakeLists.txt  Makefile.in  runsuite.sh
src/tools/: CMakeLists.txt
(+909 files in other folders)
