add_subdirectory(aboutsystem)
add_subdirectory(activitymonitor)
add_subdirectory(autoraise)
add_subdirectory(clock)
add_subdirectory(deskbar)
add_subdirectory(deskcalc)
#add_subdirectory(devices)
add_subdirectory(diskprobe)
add_subdirectory(diskusage)
add_subdirectory(drivesetup)
add_subdirectory(expander)
add_subdirectory(firstbootprompt)
add_subdirectory(fontdemo)
add_subdirectory(gradients)
add_subdirectory(installer)
add_subdirectory(launchbox)
add_subdirectory(magnify)
add_subdirectory(mandelbrot)
#add_subdirectory(networkstatus)
add_subdirectory(overlayimage)
add_subdirectory(pairs)
add_subdirectory(people)
#add_subdirectory(poorman)
add_subdirectory(powerstatus)
add_subdirectory(processcontroller)
add_subdirectory(pulse)
#add_subdirectory(remotedesktop)
add_subdirectory(resedit)
add_subdirectory(screenshot)
#add_subdirectory(serialconnect)
add_subdirectory(showimage)
add_subdirectory(stylededit)
add_subdirectory(sudoku)
add_subdirectory(switcher)
add_subdirectory(terminal)
add_subdirectory(text_search)
add_subdirectory(tracker)
add_subdirectory(workspaces)
