UsePrivateHeaders(GLOBAL app interface libroot kernel shared storage support system tracker)

add_subdirectory(appearance)
add_subdirectory(backgrounds)
add_subdirectory(datatranslations)
add_subdirectory(deskbar)
add_subdirectory(filetypes)
add_subdirectory(input)
#add_subdirectory(joysticks)    # needs device kit
add_subdirectory(keymap)
add_subdirectory(locale)
#add_subdirectory(network)      # needs bnetapi
#add_subdirectory(notifications) # missing libnotification
#add_subdirectory(printers)     # needs print kit
#add_subdirectory(screen)       # missing compute_display_timing.h
add_subdirectory(screensaver)
add_subdirectory(shortcuts)
#add_subdirectory(sounds)       # needs media kit
#add_subdirectory(time)         # needs bnetapi
add_subdirectory(tracker)
