add_subdirectory(shared)

#add_subdirectory(bmp)
#add_subdirectory(exr)
#add_subdirectory(gif)
add_subdirectory(hvif)
#add_subdirectory(icns)
#add_subdirectory(ico)
#add_subdirectory(jpeg)
#add_subdirectory(jpeg2000)
#add_subdirectory(png)
#add_subdirectory(ppm)
#add_subdirectory(psd)
add_subdirectory(raw)
#add_subdirectory(rtf)
#add_subdirectory(sgi)
#add_subdirectory(stxt)
#add_subdirectory(tga)
#add_subdirectory(tiff)
#add_subdirectory(webp)
#add_subdirectory(wonderbrush)
