add_library(tracker SHARED "")

target_include_directories(tracker PRIVATE
	"../../../headers/private/interface"
	"../../../headers/os/add-ons/input_server/"
	"../../add-ons/input_server/filters/shortcut_catcher/"
)

target_sources(tracker PRIVATE
	AttributeStream.cpp
	AutoMounterSettings.cpp
	BackgroundImage.cpp
	Bitmaps.cpp
	ContainerWindow.cpp
	CountView.cpp
	DesktopPoseView.cpp
	DeskWindow.cpp
	DialogPane.cpp
	DirMenu.cpp
	EntryIterator.cpp
	FavoritesMenu.cpp
	FBCPadding.cpp
	FilePanel.cpp
	FilePanelPriv.cpp
	FilePermissionsView.cpp
	FindPanel.cpp
	FSClipboard.cpp
	FSUndoRedo.cpp
	FSUtils.cpp
	GroupedMenu.cpp
	IconCache.cpp
	IconMenuItem.cpp
	InfoWindow.cpp
	MimeTypeList.cpp
	MiniMenuField.cpp
	Model.cpp
	MountMenu.cpp
	Navigator.cpp
	NavMenu.cpp
	NodePreloader.cpp
	NodeWalker.cpp
	OpenWithWindow.cpp
	OverrideAlert.cpp
	PendingNodeMonitorCache.cpp
	Pose.cpp
	PoseList.cpp
	PoseView.cpp
	PoseViewScripting.cpp
	QueryContainerWindow.cpp
	QueryPoseView.cpp
	RecentItems.cpp
	RegExp.cpp
	SelectionWindow.cpp
	Settings.cpp
	SettingsHandler.cpp
	SettingsViews.cpp
	SlowContextPopup.cpp
	SlowMenu.cpp
	StatusWindow.cpp
	TaskLoop.cpp
	TemplatesMenu.cpp
	Tests.cpp
	TextWidget.cpp
	TitleView.cpp
	Tracker.cpp
	TrackerInitialState.cpp
	TrackerScripting.cpp
	TrackerSettings.cpp
	TrackerSettingsWindow.cpp
	TrackerString.cpp
	TrashWatcher.cpp
	Utilities.cpp
	ViewState.cpp
	VirtualDirectoryEntryList.cpp
	VirtualDirectoryManager.cpp
	VirtualDirectoryPoseView.cpp
	VirtualDirectoryWindow.cpp
	WidgetAttributeText.cpp

	../../servers/input/InputServerFilter.cpp
	../../add-ons/input_server/filters/shortcut_catcher/BitFieldTesters.cpp
	../../add-ons/input_server/filters/shortcut_catcher/CommandActuators.cpp
	../../add-ons/input_server/filters/shortcut_catcher/CommandExecutor.cpp
	../../add-ons/input_server/filters/shortcut_catcher/KeyCommandMap.cpp
	../../add-ons/input_server/filters/shortcut_catcher/KeyInfos.cpp
	../../add-ons/input_server/filters/shortcut_catcher/ParseCommandLine.cpp
	../../add-ons/input_server/filters/shortcut_catcher/ShortcutsServerFilter.cpp
)

target_link_libraries(tracker PUBLIC be root)
